manifest/objects/Apttus__WizardRule2__c.object
<CustomObject>
    <description>Individual rules which are applied within a ruleset.</description>
    <fields>
        <fullName>Apttus__ComparisonOperator__c</fullName>
        <description>Comparison operator used in the expression condition like equal to, contains, starts with etc</description>
        <inlineHelpText>Comparison operator used in the expression condition like equal to, contains, starts with etc</inlineHelpText>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>does not start with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>does not end with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__FromInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</description>
        <inlineHelpText>The Input control on which this rule is to be applied in an expression to determine based upon the rule type the outcome value.</inlineHelpText>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__LongValue__c</fullName>
        <description>Holds long value</description>
        <inlineHelpText>Holds long value</inlineHelpText>
        <label>Long Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Sequence of rule within a ruleset</description>
        <inlineHelpText>Sequence of rule within a ruleset</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Value__c</fullName>
        <description>The value defined in an expression that is used to determine if the condition is met</description>
        <inlineHelpText>The value defined in an expression that is used to determine if the condition is met</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRulesetId__c</fullName>
        <description>Master-detail to wizard ruleset this rule belongs to</description>
        <inlineHelpText>Master-detail to wizard ruleset this rule belongs to</inlineHelpText>
        <label>Wizard Ruleset</label>
        <referenceTo>Apttus__WizardRuleset2__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wizard Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>